# LineaOne

./: .clang-format  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/: config.h.in  headers.cmake  lib.cmake  source.cmake
headers/: app.h  document.h  document_manager.h  export_document.h  input_manager.h  renderer.h  svg_icon.h  timeline_event.h  timeline_state.h  ui_manager.h
headers/gui/: app.h
headers/ui/: ui_document_tab.h  ui_draw_timeline.h  ui_elements.h  ui_main_menu.h  ui_manager.h  ui_modal_dialogs.h
src/: app.cpp  document_manager.cpp  export_document.cpp  input_manager.cpp  main.cpp  renderer.cpp  svg_icon.cpp  ui_manager.cpp
src/gui/: app.cpp
src/ui/: ui_document_tab.cpp  ui_draw_timeline.cpp  ui_elements.cpp  ui_main_menu.cpp  ui_manager.cpp  ui_modal_dialogs.cpp
